# reading

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose-local.yml  docker-compose-orion.yml  docker-stack.prod.yml  docker-stack.staging.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
.openhands/microagents/: repo.md
books/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templatetags/: book_extras.py
reading/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
reading/migrations/: 0001_initial.py  0002_rating_scale_to_10.py
reading_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: app.css
templates/: base.html
templates/books/: _book_card.html  book_confirm_delete.html  book_list.html
templates/reading/: _book_card.html  book_form.html  book_list.html
templates/registration/: login.html
