[project]
name = "reading"
version = "0.1.0"
description = "Personal reading tracker built with Django."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "Django==6.0.6",
    "gunicorn>=23.0,<24.0",
    "psycopg[binary]>=3.2,<4.0",
    "whitenoise>=6.11,<7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["DJ001"]

[tool.ruff.lint.per-file-ignores]
"books/migrations/*" = ["E501"]
